--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "path": "^0.12.7",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "sass-loader": "^2.0.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.5"
   },
