--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
@@ -24,6 +29,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1"
   }
