--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.7.2",
     "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
