--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "git-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main/index.js",
   "author": "Lukasz Malec",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server --history-api-fallback",
+    "production": "webpack && node server.js"
   },
   "dependencies": {
     "babel-preset-stage-3": "^6.24.1",
+    "compression": "^1.7.1",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "if-env": "^1.0.0",
     "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.7.2",
     "parse-link-header": "^1.0.1",
@@ -21,12 +26,12 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "react-router": "3.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
+    "webpack": "2.2.1",
     "webpack-dev-server": "^2.9.5"
   },
   "devDependencies": {
