--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "if-env": "^1.0.0",
     "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.7.2",
+    "nprogress": "^0.2.0",
     "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "react": "^16.1.1",
-    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router": "3.2.0",
     "redux": "^3.7.2",
+    "redux-nprogress": "^1.0.2",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^2.0.1",
     "style-loader": "^0.19.0",
