--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "html-webpack-plugin": "^2.30.1",
     "if-env": "^1.0.0",
     "image-webpack-loader": "^3.4.2",
+    "joi": "12",
     "node-sass": "^4.7.2",
     "nprogress": "^0.2.0",
     "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "3.2.0",
     "redux": "^3.7.2",
