--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "parse-link-header": "^1.0.1",
     "path": "^0.12.7",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
@@ -39,9 +40,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "enzyme-to-json": "^3.2.2",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.2.0"
   }
 }
