--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "git-app",
+  "jest": {
+    "setupTestFrameworkScriptFile": "./src/setupTests.js"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "main/index.js",
   "author": "Lukasz Malec",
   "license": "MIT",
   "scripts": {
+    "test": "jest",
     "dev": "webpack-dev-server --history-api-fallback",
     "production": "webpack && node server.js"
   },
@@ -13,12 +17,14 @@
     "babel-preset-stage-3": "^6.24.1",
     "compression": "^1.7.1",
     "css-loader": "^0.28.7",
+    "enzyme-adapter-react-16": "^1.1.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "if-env": "^1.0.0",
     "image-webpack-loader": "^3.4.2",
+    "jest-cli": "^21.2.1",
     "joi": "12",
     "node-sass": "^4.7.2",
     "nprogress": "^0.2.0",
